Add Technology pages.

--- a/1 Introduction/1.1 What_is_TREX_network.md
+++ b/1 Introduction/1.1 What_is_TREX_network.md
@@ -9,8 +9,7 @@ The data is encrypted with a symmetric encryption scheme and sent to random trus
 The attacker must defeat security hardware to access encrypted data with unknown values. Therefore, we can build a decentralized reputation on the Polkadot-based blockchain ecosystem and security hardware backed by semiconductor giants (e. g. Intel). The dTRE technology provides content creators with a critical tool to monetize their [decentralized reputations](https://newsletter.thedefiant.io/p/-decentralized-reputation-is-about-a8b).
 
 The emerging Web3 technology and ecosystems could enable enormous cross-chain applications which need time-sensitive and time-critical encryption of data and procedures, 
-including DAO governance, DeFi applications, decentralized prediction market, and strategy market. The data and procedures must be confidential in many scenarios until release time. TREX and its blockchain application programming interface (API) could confidently empower the TRE applications on Web 3. With a blockchain-backed reputation system, it could terminate cheap talks and scams on today’s social networks and create new marketplaces for trading time-sensitive confidential data and procedures.
+including DAO governance, DeFi applications, decentralized prediction market, and strategy market. The data and procedures must be confidential in many scenarios until release time. TREX and its blockchain application programming interface (API) could confidently empower the TRE applications on Web 3. A blockchain-backed reputation system could terminate cheap talks and scams on today’s social networks and create new marketplaces for trading time-sensitive confidential data and procedures.
 
 The TREX project roots a new family of Web3 applications aimed at institutional and business clients who need blockchain technology to enhance their data security and build reputations on Web3.
-The TREX project was initialized to support an idea that needs immutable open records but is hidden until future events.
-Applications like elections and blind bidding can be made on Web3 without dependency on centralized services. Our team believes that TRE will support a new type of Web3 application that accelerates the adoption of Web3.
+The TREX project was initialized to support an idea that needs immutable open records but is hidden until future events. As a result, applications like elections and blind bidding can be made on Web3 without dependency on centralized services. Our team believes that TRE will support a new type of Web3 application that accelerates the adoption of Web3.
