--- a/2 Network_Architecture/2.2 Nodes.md
+++ b/2 Network_Architecture/2.2 Nodes.md
@@ -3,34 +3,29 @@ In general, there are a few types of nodes in the TREX network to provide essent
 # Validator
 The validator node is a full node with complete blockchain data. The validator node will validate the new block and then put the latest block in the blockchain if the new block is valid. A validator node will also contain all validated blocks and all extrinsic data (e. g. transaction, dTRE data, dTRE procedures) within blocks. In other words, the validator code holds the whole blockchain and suppose to run 24/7. Besides holding all transaction records as any other blockchain, TREX Validator nodes support the following functions.
 ## A registry of remote attestation for keyholder nodes
-The keyholder nodes need remote attestation (RA) which is the process of asking the chip manufacturer to authenticate a TEE and provide a report. The RA report will indicate whether the TEE runs on correct and unmodified hardware with a fingerprint of the pre-agreed business logic. All keyholders agree with the same business logic so that no malicious code can prematurely leak the protected secret. It was required to finish a registration process and have an account with the chip manufacturer to acquire a RA report. This process is impractical and unnecessary for regular users. 
+The keyholder nodes need remote attestation (RA), which asks the chip manufacturer to authenticate a TEE and provide a report. The RA report will indicate whether the TEE runs on correct and unmodified hardware with a fingerprint of the pre-agreed business logic. All keyholders agree with the same business logic so that no malicious code can leak the protected secret prematurely. It was required to finish a registration process and have an account with the chip manufacturer to acquire a RA report. This process is impractical and unnecessary for regular users. 
 
-We store this remote attestation publicly on our decentralized network, which means that anyone can audit a keyholder for its integrity. Thus, it is public proof on a decentralized network that data is only processed in pre-agreed ways, fostering transparency and trust. The keyholder will have to generate and submit its remote attestation report for the first time joining the network. After the RA process, the keyholder including its hardware and software can be trusted without knowing who is running the keyholder node. The RA report also contains the TEE’s public signing key; hence, users will always be certain that they are communicating with the correct TEE. 
+We publicly store this remote attestation on our decentralized network, meaning anyone can audit a keyholder for its integrity. Thus, it is public proof on a decentralized network that data is only processed in pre-agreed ways, fostering transparency and trust. The keyholder must generate and submit its remote attestation report for the first time joining the network. After the RA process, the keyholder, including its hardware and software, can be trusted without knowing who is running the keyholder node. The RA report also contains the TEE’s public signing key; hence, users will always be confident that they are communicating with the correct TEE. 
 
 ### Shielding
-An RSA public key is contained within the RA data on-chain so that any user can use the RSA public key to encrypt a piece of data that can only be accessed within a certain TEE. The encrypted data can be safely sent to a TEE so that no third party, including the host of the keyholder node, has access to the data. In the TREX network, we call this process "shielding" which protect critical data and secret key from premature access and leak. This process helps us shield key pieces during the network communication before it shall be released as scheduled. This technology is critical for the security of the TREX network so that even if someone controls the majority of the keyholders, they still cannot access the secret earlier than the schedule.
+An RSA public key is contained within the RA data on-chain so that any user can use the RSA public key to encrypt a piece of data that can only be accessed within a specific TEE. The encrypted data can be safely sent to a TEE so that no third party, including the host of the keyholder node, has access to the data. In the TREX network, we call this process "shielding," which protect critical data and secret key from early access and leak. This process helps us shield key pieces during the network communication before it shall be released as scheduled. This technology is critical for the security of the TREX network so that even if someone controls the majority of the keyholders, they still cannot access the secret earlier than the schedule.
 
 ## Immutable storage of timestamps for encryption data
-The TREX network provides proof of time for any encrypted data on-chain. Instead of writing all data to the blockchain, it can carry the hash of the data to save on-chain data fees and still prove the data indeed is generated at a certain time. The original data block can be stored on a certain permanent off-chain decentralized storage (e. g. [Arweave](https://www.arweave.org)). The validator will ensure the source data, original time stamp and on-chain data are immutable and trustworthy. The data can and will be decrypted once the network reaches its scheduled release time.
+The TREX network provides proof of time for any encrypted data on-chain. Instead of writing all data to the blockchain, it can carry the hash of the data to save on-chain data fees and still prove the data is generated at a particular time. The original data block can be stored on a specific permanent off-chain decentralized storage (e. g. [Arweave](https://www.arweave.org)). The validator will ensure the source data, original time stamp, and on-chain data are immutable and trustworthy. The data can and will be decrypted once the network reaches its scheduled release time.
 
 ## Public endpoint for time-released data
-The keyholder will automatically release the secret key to the validators and verified to be contained in the latest block. Once the secret key is released, any user can independently decrypt the on-chain data or data in the secondary off-chain storage and verify the original data with its hash. To accelerate and optimize the data access, we developed a block index engine to automatically unpack recent blocks and decrypt any newly released data and put them into a secondary off-chain database.
+The keyholder will automatically release the secret key to the validators that verify the data and contain it in the latest block. Once the secret key is released, any user can independently decrypt the on-chain data or data in the secondary off-chain storage and verify the original data with its hash. To accelerate and optimize data access, we developed a block index engine to unpack recent blocks automatically, decrypt any newly released data, and put them into a secondary off-chain database.
 
 # Keyholder
-The keyholder node is the node that runs an off-chain worker (OCW) inside a TEE. The keyholder node requires specific computer hardware to run the TEE code. Each keyholder node shall be remotely attested by either a decentralized remote attestation service or a cloud-based remote attestation service so that the users know that the TEE code on the keyholder node is certified and original.
+The keyholder node is the node that runs an off-chain worker (OCW) inside a TEE. The keyholder node requires specific computer hardware to run the TEE code. Each keyholder node shall be remotely attested by either a decentralized, remote attestation service or a cloud-based remote attestation service so that the users know that the TEE code on the keyholder node is certified and original.
 
 The keyholder plays an essential role in the security of timed-release encryption. Therefore, it needs frequent security upgrades to support the latest security features for its OCW code and requires it to be remotely attested by users.
 The keyholder node can be easily deployed on 6-10th gen Intel Core Computers and cloud servers with Intel Xeon Scalable Processors (e. g. Azure Cloud Service).
 
 ## Keyholding
-The keyholder node serves an essential function to hold the secret keys for encrypted on-chain data and release it in the future. The business logic inside the keyholder's TEE will release the secret keys based on its schedule. The release schedule is generated when the data is encrypted and sent to the network and cannot be changed by any party including the original creator. There is an index data that comes with the secret key to point at the block height and hash index of its original on-chain record. It will be released together with the secret key so that the encrypted data can be released on time.
-
-### Time security
-In a decentralized system, how the keyholder knows the current time without trusting a third party? The common centralized backend service can query current network time with [network time protocol](https://en.wikipedia.org/wiki/Network_Time_Protocol). However, in our system, the network time protocol is prone to [man-in-the-middle attacks](https://en.wikipedia.org/wiki/Man-in-the-middle_attack) even if we assume the network time service is trustworthy.
-
-Our current solution is the adoption of [network time security protocol](https://www.rfc-editor.org/rfc/rfc8915.html) into the TEE. This new protocol prevents the keyholder from man-in-the-middle attacks and ensures secured communication between the TEE and network time servers. To prevent a single point of failure, the keyholder will request network times from a distributed network of time servers and eliminate outliers. Our next-generation keyholder code will host a light blockchain client inside the TEE and verify the [block time](https://en.wikipedia.org/wiki/Blockchain#Block_time) from dominant global blockchain networks (e. g. Bitcoin, Ethereum, Solana and Polkadot). The blockchain itself serves as a large-scale decentralized clock since each block contains a timestamp being verified by a large network.
+The keyholder node serves an essential function in holding the secret keys for encrypted on-chain data and releasing it in the future. The business logic inside the keyholder's TEE will release the private keys based on its schedule. The release schedule is generated when the data is encrypted and sent to the network and cannot be changed by any party, including the original creator. In addition, index data comes with a secret key to point at the block height and hash index of its original on-chain record. It will be released with the private key so encrypted data can be released on time.
 
 # Archiver node
 Technically, if the secret key is released from the keyholder node, the encrypted content with the corresponding block become unlockable but not unlocked. However, the decryption process is not the duty of validator nodes, and the contents do not unlock themselves automatically. When the release time arrives, the encrypted contents become unlockable since the shared key was released from the keyholders. The achiever node is responsible to uses the newly released pieces, reconstructing the key, indexing the unlockable contents with a remodeled secondary database, and decrypting data into such an off-chain secondary database for archiving.
 
-The archiver nodes contain two major components. The first one is a full node that syncs with the rest of the network. The other part is a block index engine which monitors the full node and deserializes the most recent blocks into restructured data fields, then, inserted into the secondary database for external access. Moreover, the deserialized procedure may be executed for previous blocks. The archive node can be reconstructed from a full node at any time, and the off-chain archive database is independent of the on-chain primary database. It requires no permission to run the archiver node and host data indexing service. Institutions and professional users may host the archive node. It is a form of distributed data storage, and the end users may access decrypted contents on archiver nodes with a web application or a mobile application.
+The archiver nodes contain two major components. The first one is a full node that syncs with the rest of the network. The other part is a block index engine which monitors the full node and deserializes the most recent blocks into restructured data fields, then inserted into the secondary database for external access. Moreover, the deserialized procedure may be executed for previous blocks. The archive node can be reconstructed from a full node at any time, and the off-chain archive database is independent of the on-chain primary database. It requires no permission to run the archiver node and host data indexing service. Institutions and professional users may host the archive node. It is a form of distributed data storage, and the end users may access decrypted contents on archiver nodes with a web application or a mobile application.
