Revise current version.

--- a/4 API/4.1 JSON_RPC_API.md
+++ b/4 API/4.1 JSON_RPC_API.md
@@ -44,9 +44,25 @@ function get_enclave_count_request(endpoint) {
 ```
 
 ## `enclave_select (params:u64)`
-This method allows users to select a number of enclaves for threshold encryption. The RPC call will return the secret key and account information required by the user according to the number of necessary enclaves.
+This method allows users to select a number of enclaves for threshold encryption. The RPC call will return the shielding key and account information of randomly selected enclaves according to the number of necessary enclaves required by the user.
 ```bash
 curl -H "Content-Type: application/json" -d '{"id": 1, "jsonrpc": "2.0", "method": "enclave_select","params":[8]}' http://localhost:9933/
+```
+A simple JavaScript example is suggested, like the one below.
+```JavaScript
+function select_enclaves(endpoint, enclave_num) {
+  let request = new Request(endpoint, {
+    method: "POST",
+    body: JSON.stringify({
+      id: 1,
+      jsonrpc: "2.0",
+      method: "enclave_select",
+      params: [enclave_num],
+    }),
+    headers: { "Content-Type": "application/json" },
+  });
+  return request;
+}
 ```
 When the number of registered enclaves is less than the number of enclaves required by request, an error of not enough enclaves is returned.
 ```JSON
