--- a/2 Network_Architecture/2.1 Network_Overview.md
+++ b/2 Network_Architecture/2.1 Network_Overview.md
@@ -14,7 +14,11 @@ The validator and keyholder support the network consensus and functionality so t
 ## Light client
 The light client does not contain all blockchain data compared to the full node. Instead, it only includes block headers to initiate and validate extrinsic data from regular users. The light node does not need to run 24/7. The light node allows users to sync with the whole network faster using much lower internet bandwidth. The light node can run on any modern computing device, from Raspberry Pi to smartphones, or run in a web browser as WASM codes. It enables users from anywhere with an internet connection to encrypt contents anonymously and send them to the TREX network. The light node will be the most popular type of client on the TREX network running with data encryption applications.
 
+The light client is currently not available. However, we are actively building our TREX light client in the next milestone. The light client will be based on [Polkadot.js](https://polkadot.js.org).
+
 ## Archiver service
 The archiver nodes record all historical blocks and decrypt data into a secondary database. The secondary database is built with PostgreSQL, which provides high-performance query and indexing on blockchain data. In addition, an HTTP server can serve along with the archiver node as a portal for regular users to search and browse published data and verify the previously hidden data.
 
 The following pages will introduce more details about different nodes in this system as a building block to achieve decentralized timed-release encryption for Web3 interoperability.
+
+The Archiver node is still under development. The software will be released in the next phase.
