--- a/4 API/4.2 Runtime_API.md
+++ b/4 API/4.2 Runtime_API.md
@@ -1,7 +1,7 @@
 
-The runtime API is the on-chain runtime logic, which writes the encrypted data into the blockchain as permanent records. It must be signed with a valid blockchain account and a fee to call the API and write into the on-chain storage.
+The runtime API is the on-chain runtime logic, which writes the encrypted data into the blockchain as permanent records. It must be signed with a valid blockchain account and pay a fee to call the API before writing into the on-chain storage.
 # Submit Encrypted Data
-There are two major methods to submit timed-release encrypted data as extrinsic data to the TREX network: HTTP and Websocket.
+There are two protocols to submit timed-release encrypted data as extrinsic data to the TREX network: HTTP and Websocket.
 It recommends using the [subxt](https://docs.rs/subxt/latest/subxt/)](https://docs.rs/subxt/latest/subxt/) library to generate, sign and encode extrinsic to HTTP endpoints.
 
 We have a Rust example, which may be compiled into WebAssembly and called from JavaScript.
@@ -29,8 +29,10 @@ async fn submit_trex_data(cipher:Vec<u8>,
     println!("TREX extrinsic {:?} submitted",tx_submit_hash);
 }
 ```
-We provide examples and library code in this [Github Repo](https://github.com/NexTokenTech/trex-subxt).
+We provide example codes in this [Github Repo](https://github.com/NexTokenTech/trex-subxt).
 
 Alternatively, you may use [substrate-API-client](https://github.com/scs/substrate-api-client) for WebSocket endpoints. The example is included in the [CLI code](https://github.com/NexTokenTech/trex-keyholder/blob/main/service/src/cli.rs) for the key-holder node.
 
 You may also serialize the runtime API call and use it with JSON-RPC method `author_submitExtrinsic, params: Vec<String> (hex-encoded Request)`. The runtime method and its parameters are serialized as hex codes and sent as extrinsic.
+
+Currently, the runtime API to submit encrypted data is only available to x86 environments. We are working on JavaScript API with WebAssembly libraries, so front-end users can directly submit encrypted data in browsers. 
