--- a/2 Network_Architecture/2.2 Nodes.md
+++ b/2 Network_Architecture/2.2 Nodes.md
@@ -1,4 +1,6 @@
-In general, there are a few types of nodes in the TREX network to provide essential functions.
+Generally, there are a few types of nodes in the TREX network to provide essential functions.
+
+![TREX-arch](trex-arch.jpg)
 
 # Validator
 The validator node is a full node with complete blockchain data. The validator node will validate the new block and then put the latest block in the blockchain if the new block is valid. A validator node will also contain all validated blocks and all extrinsic data (e. g. transaction, dTRE data, dTRE procedures) within blocks. In other words, the validator code holds the whole blockchain and suppose to run 24/7. Besides holding all transaction records as any other blockchain, TREX Validator nodes support the following functions.
@@ -26,6 +28,6 @@ The keyholder node can be easily deployed on 6-10th gen Intel Core Computers and
 The keyholder node serves an essential function in holding the secret keys for encrypted on-chain data and releasing it in the future. The business logic inside the keyholder's TEE will release the private keys based on its schedule. The release schedule is generated when the data is encrypted and sent to the network and cannot be changed by any party, including the original creator. In addition, index data comes with a secret key to point at the block height and hash index of its original on-chain record. It will be released with the private key so encrypted data can be released on time.
 
 # Archiver node
-Technically, if the secret key is released from the keyholder node, the encrypted content with the corresponding block become unlockable but not unlocked. However, the decryption process is not the duty of validator nodes, and the contents do not unlock themselves automatically. When the release time arrives, the encrypted contents become unlockable since the shared key was released from the keyholders. The achiever node is responsible to uses the newly released pieces, reconstructing the key, indexing the unlockable contents with a remodeled secondary database, and decrypting data into such an off-chain secondary database for archiving.
+Technically, if the secret key is released from the keyholder node, the encrypted content with the corresponding block becomes unlockable but not unlocked. However, the decryption process is not the duty of validator nodes, and the contents do not unlock themselves automatically. When the release time arrives, the encrypted contents become unlockable since the shared key was released from the keyholders. The achiever node is responsible to uses the newly released pieces, reconstructing the key, indexing the unlockable contents with a remodeled secondary database, and decrypting data into such an off-chain secondary database for archiving.
 
 The archiver nodes contain two major components. The first one is a full node that syncs with the rest of the network. The other part is a block index engine which monitors the full node and deserializes the most recent blocks into restructured data fields, then inserted into the secondary database for external access. Moreover, the deserialized procedure may be executed for previous blocks. The archive node can be reconstructed from a full node at any time, and the off-chain archive database is independent of the on-chain primary database. It requires no permission to run the archiver node and host data indexing service. Institutions and professional users may host the archive node. It is a form of distributed data storage, and the end users may access decrypted contents on archiver nodes with a web application or a mobile application.
