Update figures and workflow.

--- a/3 Technology/3.1 Decentralized_Timed-Release_Encryption.md
+++ b/3 Technology/3.1 Decentralized_Timed-Release_Encryption.md
@@ -2,7 +2,7 @@ The core functionality of the TREX network is the formation of a robust and secu
 
 # How the TREX network works
 
-![TREX-arch](trex-arch.png)
+![TREX-workflow](workflow.jpg)
 
 The client, who will encrypt a message and schedule the release of the encrypted message on the blockchain, shall determine the block height for its corresponding release time. Then, the client shall acquire on-chain reports for a list of trusted keyholders (trusted off-chain workers), which have been verified by a type of remote attestation service (e. g. Integritee Network and Azure Confidential Computing). Then, the client can optionally split the key for an extra layer of security and robustness and send the shielded key to the keyholder nodes that runs off-chain workers inside TEEs. Finally, the key will be put into a queue inside the TEE enclave and waiting for its release.
 
